--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		img:is([sizes="auto" i], [sizes^="auto," i]) {
 			contain-intrinsic-size: 3000px 1500px
 		}
-	</style> <!-- All in One SEO 4.2.8 - aioseo.com -->
+	</style>
 	<title>Home - Grade-Up</title>
 	<meta name="description"
 		content="Grade-Up Welcome to Grade-Up. At Grade-Up, we help you choose the most suitable career for your child. We find your child&#039;s innate talents using scientifically proven methods and help you plan your child&#039;s upbringing and shape their future by enhancing their skills and abilities. With over 2000+ satisfied clients, Grade-Up offers you several tests" />
@@ -1885,7 +1885,7 @@
 						<div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow">
 							<h2
 								class="has-text-align-left has-vivid-cyan-blue-color has-text-color has-x-large-font-size wp-block-heading">
-								<strong>Grade Up</strong></h2>
+								<strong>Grade-Up</strong></h2>
 						</div>
 						<div class="wp-block-column is-vertically-aligned-center is-layout-flow wp-block-column-is-layout-flow"
 							style="flex-basis:50%">
@@ -1926,13 +1926,13 @@
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="http://grade-up.in/MIT"><span
+															href="https://grade-up.in/MIT"><span
 																class="wp-block-navigation-item__label">MIT</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/ciqt/"><span
+															href="https://grade-up.in/ciqt-a/"><span
 																class="wp-block-navigation-item__label">CIQT-A</span></a>
 													</li>
 													<li
@@ -2251,4 +2251,4 @@
 	<script src="./js/tabs-responsive-assets-js-tabs-custom.js" id="wpsm_tabs_r_custom-js-front-js"></script>
 </body>
 
-</html> <!-- Page cached by LiteSpeed Cache 6.5.2 on 2024-11-29 19:03:49 -->
+</html>
