Minor fixes including removal of slashes that caused links to break

--- a/contact-info-received.html
+++ b/contact-info-received.html
@@ -1611,19 +1611,19 @@ permalink: /contact-info-received.html
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="http://grade-up.in/MIT"><span
+															href="http://grade-up.in/mit"><span
 																class="wp-block-navigation-item__label">MIT</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/ciqt-a/"><span
+															href="https://grade-up.in/ciqt-a"><span
 																class="wp-block-navigation-item__label">CIQT-A</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/best/"><span
+															href="https://grade-up.in/best"><span
 																class="wp-block-navigation-item__label">B.E.S.T</span></a>
 													</li>
 													<li
