--- a/gallery-new.html
+++ b/gallery-new.html
@@ -2603,19 +2603,19 @@ permalink: /gallery-new.html
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="http://grade-up.in/MIT"><span
+															href="http://grade-up.in/mit"><span
 																class="wp-block-navigation-item__label">MIT</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/ciqt-a/"><span
+															href="https://grade-up.in/ciqt-a"><span
 																class="wp-block-navigation-item__label">CIQT-A</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/best/"><span
+															href="https://grade-up.in/best"><span
 																class="wp-block-navigation-item__label">B.E.S.T</span></a>
 													</li>
 													<li
@@ -2639,7 +2639,7 @@ permalink: /gallery-new.html
 						</div>
 					</div>
 				</div>
-				<h2 class="has-text-align-center wp-block-heading">Pics Gallery</h2>
+				<h2 class="has-text-align-center wp-block-heading">Gallery</h2>
 				<hr class="wp-block-separator has-alpha-channel-opacity" />
 				<div class="wp-block-nextend-smartslider3">
 					<div class="n2-section-smartslider fitvidsignore  n2_clear" data-ssid="3" tabindex="0" role="region"
