--- a/brainstamina.html
+++ b/brainstamina.html
@@ -2220,31 +2220,31 @@ permalink: /brainstamina.html
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="http://grade-up.in/MIT"><span
+															href="https://grade-up.in/mit"><span
 																class="wp-block-navigation-item__label">MIT</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/ciqt-a/"><span
+															href="https://grade-up.in/ciqt-a"><span
 																class="wp-block-navigation-item__label">CIQT-A</span></a>
 													</li>
 													<li
-														class="has-medium-font-size wp-block-navigation-item current-menu-item wp-block-navigation-link">
+														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/best/" aria-current="page"><span
+															href="https://grade-up.in/best"><span
 																class="wp-block-navigation-item__label">B.E.S.T</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/gallery-new/"><span
+															href="https://grade-up.in/gallery-new"><span
 																class="wp-block-navigation-item__label">Gallery</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/faq-new/"><span
+															href="https://grade-up.in/faq-new"><span
 																class="wp-block-navigation-item__label">FAQ</span></a>
 													</li>
 												</ul>
