--- a/ciqt.html
+++ b/ciqt.html
@@ -1769,7 +1769,7 @@ permalink: /ciqt.html
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item current-menu-item wp-block-navigation-link">
-														<a class="wp-block-navigation-item__content" href="./ciqt.html"
+														<a class="wp-block-navigation-item__content" href="./ciqt-a.html"
 															aria-current="page"><span
 																class="wp-block-navigation-item__label">CIQT-A</span></a>
 													</li>
@@ -1782,13 +1782,13 @@ permalink: /ciqt.html
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/gallery-new/"><span
+															href="https://grade-up.in/gallery-new"><span
 																class="wp-block-navigation-item__label">Gallery</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/faq-new/"><span
+															href="https://grade-up.in/faq-new"><span
 																class="wp-block-navigation-item__label">FAQ</span></a>
 													</li>
 												</ul>
