--- a/ciqt.html
+++ b/ciqt.html
@@ -1764,7 +1764,7 @@ permalink: /ciqt.html
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="http://grade-up.in/MIT"><span
+															href="http://grade-up.in/mit"><span
 																class="wp-block-navigation-item__label">MIT</span></a>
 													</li>
 													<li
