--- a/index.html
+++ b/index.html
@@ -2067,13 +2067,13 @@
 									style="padding-top:0;padding-right:0;padding-bottom:var(--wp--preset--spacing--50);padding-left:30px">
 									<li><a href="./mit.html" title="Multiple Intelligence Test">Multiple Intelligence
 											Test</a></li>
-									<li><a href="https://grade-up.in/ciqt/" title="CIQT">Caliber Intelligence Quotient
+									<li><a href="https://grade-up.in/ciqt" title="CIQT">Caliber Intelligence Quotient
 											Test</a></li>
 									<li><a href="./ciqt-a.html" title="CIQT-A">Caliber Intelligence Quotient Test
 											&#8211; Advanced</a></li>
-									<li><a href="https://grade-up.in/brainstamina/"
+									<li><a href="https://grade-up.in/brainstamina"
 											title="BrainStamina®">BrainStamina®</a></li>
-									<li><a href="https://grade-up.in/best/" title="B.E.S.T">B.E.S.T</a></li>
+									<li><a href="https://grade-up.in/best" title="B.E.S.T">B.E.S.T</a></li>
 								</ul>
 							</div>
 						</div>
