--- a/8-2.html
+++ b/8-2.html
@@ -2065,12 +2065,12 @@
 									Products &amp; Tests We Offer</h4>
 								<ul class="wp-block-list"
 									style="padding-top:0;padding-right:0;padding-bottom:var(--wp--preset--spacing--50);padding-left:30px">
-									<li><a href="https://grade-up.in/mit/" title="Multiple Intelligence Test">Multiple
+									<li><a href="https://grade-up.in/mit" title="Multiple Intelligence Test">Multiple
 											Intelligence Test</a></li>
 									<li><a href="./ciqt.html" title="CIQT">Caliber Intelligence Quotient Test</a></li>
-									<li><a href="https://grade-up.in/ciqt-a/" title="CIQT-A">Caliber Intelligence
+									<li><a href="https://grade-up.in/ciqt-a" title="CIQT-A">Caliber Intelligence
 											Quotient Test &#8211; Advanced</a></li>
-									<li><a href="https://grade-up.in/brainstamina/"
+									<li><a href="https://grade-up.in/brainstamina"
 											title="BrainStamina®">BrainStamina®</a></li>
 									<li><a href="./best.html" title="B.E.S.T">B.E.S.T</a></li>
 								</ul>
