--- a/8-2.html
+++ b/8-2.html
@@ -1944,13 +1944,13 @@
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/gallery-new/"><span
+															href="https://grade-up.in/gallery-new"><span
 																class="wp-block-navigation-item__label">Gallery</span></a>
 													</li>
 													<li
 														class="has-medium-font-size wp-block-navigation-item wp-block-navigation-link">
 														<a class="wp-block-navigation-item__content"
-															href="https://grade-up.in/faq-new/"><span
+															href="https://grade-up.in/faq-new"><span
 																class="wp-block-navigation-item__label">FAQ</span></a>
 													</li>
 												</ul>
