--- a/faq-new.html
+++ b/faq-new.html
@@ -1558,11 +1558,11 @@ permalink: /faq-new.html
 		<main class="wp-block-group is-layout-flow wp-block-group-is-layout-flow">
 			<div
 				class="entry-content wp-block-post-content is-layout-constrained wp-block-post-content-is-layout-constrained">
-				<div
+				<!-- <div
 					class="wp-block-columns is-layout-flex wp-container-core-columns-is-layout-1 wp-block-columns-is-layout-flex">
 					<div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow" style="flex-basis:100%">
 					</div>
-				</div>
+				</div> -->
 				<div class="wp-block-group alignfull has-background is-layout-flow wp-block-group-is-layout-flow"
 					style="background-color:#09274d">
 					<div
