--- a/gallery-new.html
+++ b/gallery-new.html
@@ -2663,7 +2663,7 @@ permalink: /gallery-new.html
 																			decoding="async"
 																			src="./images/slider-cache-981dba79ae818751e5c33736ef3094ad-20220115_185718-1-scaled.jpg"
 																			alt="" title="" loading="lazy"
-																			class="skip-lazy" data-skip-lazy="1">
+																			class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false">
 																	</picture>
 																</div>
 																<div data-color="RGBA(255,255,255,0)"
@@ -2679,7 +2679,7 @@ permalink: /gallery-new.html
 																			decoding="async"
 																			src="./images/slider-cache-4aba5ace7d29bbfc54833cf40d4428a6-20210527_115049-scaled.jpg"
 																			alt="" title="" loading="lazy"
-																			class="skip-lazy" data-skip-lazy="1">
+																			class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false">
 																	</picture>
 																</div>
 																<div data-color="RGBA(255,255,255,0)"
@@ -2695,7 +2695,7 @@ permalink: /gallery-new.html
 																			decoding="async"
 																			src="./images/slider-cache-8b1a3a3825fddcf9955d39fcacb845c6-20210213_175256-01.jpg"
 																			alt="" title="" loading="lazy"
-																			class="skip-lazy" data-skip-lazy="1">
+																			class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false">
 																	</picture>
 																</div>
 																<div data-color="RGBA(255,255,255,0)"
@@ -2711,7 +2711,7 @@ permalink: /gallery-new.html
 																			decoding="async"
 																			src="./images/slider-cache-b89dd25adac5ed74bff49792af03aad9-WhatsApp-Image-2022-11-30-at-2.34.10-PM.jpg"
 																			alt="" title="" loading="lazy"
-																			class="skip-lazy" data-skip-lazy="1">
+																			class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false">
 																	</picture>
 																</div>
 																<div data-color="RGBA(255,255,255,0)"
@@ -2727,7 +2727,7 @@ permalink: /gallery-new.html
 																			decoding="async"
 																			src="./images/slider-cache-c98314d440183b81aea877371c648036-20220109_170353.jpg"
 																			alt="" title="" loading="lazy"
-																			class="skip-lazy" data-skip-lazy="1">
+																			class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false">
 																	</picture>
 																</div>
 																<div data-color="RGBA(255,255,255,0)"
@@ -2743,7 +2743,7 @@ permalink: /gallery-new.html
 																			decoding="async"
 																			src="./images/slider-cache-4225f9da7253989249716552205ae8af-10563046_315931448581712_2758231587096521_n.jpg"
 																			alt="" title="" loading="lazy"
-																			class="skip-lazy" data-skip-lazy="1">
+																			class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false">
 																	</picture>
 																</div>
 																<div data-color="RGBA(255,255,255,0)"
@@ -2759,7 +2759,7 @@ permalink: /gallery-new.html
 																			decoding="async"
 																			src="./images/slider-cache-c1121463033087e28e81452051611db6-WhatsApp-Image-2022-11-30-at-2.25.49-PM.jpg"
 																			alt="" title="" loading="lazy"
-																			class="skip-lazy" data-skip-lazy="1">
+																			class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false">
 																	</picture>
 																</div>
 																<div data-color="RGBA(255,255,255,0)"
@@ -2895,7 +2895,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="20220115_185718"
 																	src="./images/slider-cache-2a596b8f3a5acd8a671a6e0d6564b344-20220115_185718-1-scaled.jpg"
 																	width="173" height="80" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 														<div class="n2-thumbnail-dot n2-style-67eb3c604afd812b9014e8165a592b43-dot"
 															data-slide-public-id="2" role="button"
@@ -2904,7 +2904,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="20210527_115049"
 																	src="./images/slider-cache-2f2f22fb7bbef07b95f7c37dfcde78cd-20210527_115049-scaled.jpg"
 																	width="184" height="80" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 														<div class="n2-thumbnail-dot n2-style-67eb3c604afd812b9014e8165a592b43-dot"
 															data-slide-public-id="3" role="button"
@@ -2913,7 +2913,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="20210213_175256-01"
 																	src="./images/slider-cache-55a4c3f3a7c173c1c0106de09d1ca626-20210213_175256-01.jpg"
 																	width="120" height="120" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 														<div class="n2-thumbnail-dot n2-style-67eb3c604afd812b9014e8165a592b43-dot"
 															data-slide-public-id="4" role="button"
@@ -2924,7 +2924,7 @@ permalink: /gallery-new.html
 																	alt="WhatsApp Image 2022-11-30 at 2.34.10 PM"
 																	src="./images/slider-cache-f5411c57c1d4e6100f7575a8543e4207-WhatsApp-Image-2022-11-30-at-2.34.10-PM.jpg"
 																	width="150" height="80" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 														<div class="n2-thumbnail-dot n2-style-67eb3c604afd812b9014e8165a592b43-dot"
 															data-slide-public-id="5" role="button"
@@ -2933,7 +2933,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="20220109_170353"
 																	src="./images/slider-cache-bed54217bf38b010356b09e176b6b4d7-20220109_170353.jpg"
 																	width="173" height="80" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 														<div class="n2-thumbnail-dot n2-style-67eb3c604afd812b9014e8165a592b43-dot"
 															data-slide-public-id="6" role="button"
@@ -2944,7 +2944,7 @@ permalink: /gallery-new.html
 																	alt="10563046_315931448581712_2758231587096521_n"
 																	src="./images/slider-cache-0653fea2bf6e8912f72939d13eeac419-10563046_315931448581712_2758231587096521_n.jpg"
 																	width="120" height="119" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 														<div class="n2-thumbnail-dot n2-style-67eb3c604afd812b9014e8165a592b43-dot"
 															data-slide-public-id="7" role="button"
@@ -2955,7 +2955,7 @@ permalink: /gallery-new.html
 																	alt="WhatsApp-Image-2022-11-30-at-2.25.49-PM"
 																	src="./images/slider-cache-82b477b32ed795a0d30f161e5962babe-WhatsApp-Image-2022-11-30-at-2.25.49-PM.jpg"
 																	width="120" height="151" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 													</div>
 												</div>
@@ -3061,7 +3061,7 @@ permalink: /gallery-new.html
 																								alt="Play" width="480"
 																								height="360"
 																								data-skip-lazy="1"
-																								src="./images/z4h-hqdefault.jpg" /><img
+																								src="./images/z4h-hqdefault.jpg" oncontextmenu="return false;" draggable="false"/><img
 																								loading="lazy"
 																								decoding="async"
 																								class="n2_ss_video_play_btn skip-lazy"
@@ -3112,7 +3112,7 @@ permalink: /gallery-new.html
 																								loading="lazy"
 																								width="480" height="360"
 																								data-skip-lazy="1"
-																								src="./images/75u-hqdefault.jpg" /><img
+																								src="./images/75u-hqdefault.jpg" oncontextmenu="return false;" draggable="false"/><img
 																								loading="lazy"
 																								decoding="async"
 																								class="n2_ss_video_play_btn skip-lazy"
@@ -3163,7 +3163,7 @@ permalink: /gallery-new.html
 																								loading="lazy"
 																								width="480" height="360"
 																								data-skip-lazy="1"
-																								src="./images/3ma-hqdefault.jpg" /><img
+																								src="./images/3ma-hqdefault.jpg" oncontextmenu="return false;" draggable="false"/><img
 																								loading="lazy"
 																								decoding="async"
 																								class="n2_ss_video_play_btn skip-lazy"
@@ -3214,7 +3214,7 @@ permalink: /gallery-new.html
 																								loading="lazy"
 																								width="480" height="360"
 																								data-skip-lazy="1"
-																								src="./images/qrz-hqdefault.jpg" /><img
+																								src="./images/qrz-hqdefault.jpg" oncontextmenu="return false;" draggable="false"/><img
 																								loading="lazy"
 																								decoding="async"
 																								class="n2_ss_video_play_btn skip-lazy"
@@ -3270,7 +3270,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="Video1"
 																	src="./images/slider-cache-9f791e08bd73d1c0bc0de50dc118dabb-hqdefault.jpg"
 																	width="128" height="96" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 														</div>
 														<div class="n2-thumbnail-dot n2-style-74af251937d739c72ce5b88e31050c9a-dot"
 															data-slide-public-id="2" role="button" aria-label="Video2"
@@ -3279,7 +3279,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="Video2"
 																	src="./images/slider-cache-8b56400b6d7e2b4394b4f43e1b6bd81e-hqdefault.jpg"
 																	width="128" height="96" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 															<svg class="n2-thumbnail-dot-type"
 																xmlns="http://www.w3.org/2000/svg" width="48"
 																height="48" viewbox="0 0 48 48">
@@ -3296,7 +3296,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="Video3"
 																	src="./images/slider-cache-0c21537231186e38e591347e59559654-hqdefault.jpg"
 																	width="128" height="96" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 															<svg class="n2-thumbnail-dot-type"
 																xmlns="http://www.w3.org/2000/svg" width="48"
 																height="48" viewbox="0 0 48 48">
@@ -3313,7 +3313,7 @@ permalink: /gallery-new.html
 																	decoding="async" alt="Video4"
 																	src="./images/slider-cache-56b2ac2ef98fcabc00c52d8ac4950167-hqdefault.jpg"
 																	width="128" height="96" loading="lazy"
-																	class="skip-lazy" data-skip-lazy="1" /></picture>
+																	class="skip-lazy" data-skip-lazy="1" oncontextmenu="return false;" draggable="false"/></picture>
 															<svg class="n2-thumbnail-dot-type"
 																xmlns="http://www.w3.org/2000/svg" width="48"
 																height="48" viewbox="0 0 48 48">
