--- a/index.html
+++ b/index.html
@@ -2015,7 +2015,7 @@
 						<figure class="wp-block-media-text__media"><img decoding="async" width="1024" height="683"
 								src="./images/2023-01-DSC7509-1024x683.jpg" alt="" class="wp-image-603 size-full"
 								srcset="./images/2023-01-DSC7509-1024x683.jpg 1024w, ./images/2023-01-DSC7509-300x200.jpg 300w, ./images/2023-01-DSC7509-768x512.jpg 768w, ./images/2023-01-DSC7509-1536x1024.jpg 1536w, ./images/2023-01-DSC7509.jpg 1800w"
-								sizes="(max-width: 1024px) 100vw, 1024px" /></figure>
+								sizes="(max-width: 1024px) 100vw, 1024px" oncontextmenu="return false;" draggable="false"/></figure>
 					</div>
 				</div>
 				<hr class="wp-block-separator has-text-color has-alpha-channel-opacity has-background is-style-wide"
@@ -2090,7 +2090,7 @@
 								loading="lazy" decoding="async" width="1024" height="683"
 								src="./images/2023-01-picwithbook-1024x683.jpg" alt="" class="wp-image-645 size-full"
 								srcset="./images/2023-01-picwithbook-1024x683.jpg 1024w, ./images/2023-01-picwithbook-300x200.jpg 300w, ./images/2023-01-picwithbook-768x512.jpg 768w, ./images/2023-01-picwithbook-1536x1024.jpg 1536w, ./images/2023-01-picwithbook.jpg 1800w"
-								sizes="auto, (max-width: 1024px) 100vw, 1024px" /></a></figure>
+								sizes="auto, (max-width: 1024px) 100vw, 1024px" oncontextmenu="return false;" draggable="false"/></a></figure>
 					<div class="wp-block-media-text__content">
 						<p>In an ever-growing world where job satisfaction is decreasing &amp; imposter syndrome is
 							increasing, it is important to understand what kind of career you should build &amp; how.
